--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tanstack/react-query-devtools": "^4.29.14",
     "antd": "^5.6.1",
     "axios": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
